--- a/styles.css
+++ b/styles.css
@@ -5,93 +5,122 @@
 /* BODY STYLES */
 body {
     font-family: 'Ubuntu', sans-serif;
-    background-color: #0f0918;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='50' height='40' viewBox='0 0 50 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23134bdd' fill-opacity='0.4'%3E%3Cpath d='M40 10L36.67 0h-2.11l3.33 10H20l-2.28 6.84L12.11 0H10l6.67 20H10l-2.28 6.84L2.11 10 5.44 0h-2.1L0 10l6.67 20-3.34 10h2.11l2.28-6.84L10 40h20l2.28-6.84L34.56 40h2.1l-3.33-10H40l2.28-6.84L47.89 40H50l-6.67-20L50 0h-2.1l-5.62 16.84L40 10zm1.23 10l-2.28-6.84L34 28h4.56l2.67-8zm-10.67 8l-2-6h-9.12l2 6h9.12zm-12.84-4.84L12.77 38h15.79l2.67-8H20l-2.28-6.84zM18.77 20H30l2.28 6.84L37.23 12H21.44l-2.67 8zm-7.33 2H16l-4.95 14.84L8.77 30l2.67-8z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    color: black;
+    background-color: white;
+    height: 100%;
+    background-image: url('./assets/BG.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
+html {
+    height: 100%;
+}
 
+.dark {
+    transition: .1s ease;
+    background-color: #25264c;
+    color: white;
+}
 
 
 /* GENERAL STYLES */
-main {
+nav {
     display: flex;
-    padding: 3rem 4rem 2rem 4rem;
+    justify-content: space-around; 
+    align-items: center;
+    border-bottom: 2px solid;
+    transition: .1s ease-in;
+}
+
+nav:hover {
+    border-color: #efd81d;
+}
+
+.onoffswitch {
+    position: relative; width: 79px;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+}
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border: 2px solid #999999; border-radius: 30px;
+}
+.onoffswitch-inner {
+    display: block; width: 200%; margin-left: -100%;
+    transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
+    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+    content: "ON";
+    padding-left: 10px;
+    background-color: #34A7C1; color: #FFFFFF;
+}
+.onoffswitch-inner:after {
+    content: "OFF";
+    padding-right: 10px;
+    background-color: #EEEEEE; color: #999999;
+    text-align: right;
+}
+.onoffswitch-switch {
+    display: block; width: 20px; margin: 5px;
+    background: #FFFFFF;
+    position: absolute; top: 0; bottom: 0;
+    right: 45px;
+    border: 2px solid #999999; border-radius: 30px;
+    transition: all 0.3s ease-in 0s; 
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px; 
 }
 
 h1 {
-    width: fit-content;
-    font-size: 50px;
-    font-weight: 700;
-    color: #fff;
-    transition: .2s ease-in;
+    font-size: 32px;
+    cursor: default;
+    transition: .1s ease-in;
 }
 
 h1:hover {
-    color: #F0DB4F;
-    cursor: default;
+    color: #efd81d;
 }
 
-p {
-    font-size: 20px;
-    font-weight: 600;
-    color: #fff;
-    line-height: 1.4;
-}
-
-.author__info {
-    padding: .5rem;
-    text-align: left;
-    color: #fff;
-    font-weight: 600;
-}
-
-.author {
-    font-size: 26px;
+a {
+    text-decoration: none;
+    color: #000;
     transition: .2s ease-in;
 }
 
-.author:hover {
-    color: #F0DB4F;
-    cursor: default;
+a:hover {
+    color: #5f5e5e;
 }
 
-small {
-    color: #17aff6;
-    font-size: 14px;
+
+
+/* EDITOR STYLES */
+main {
+    padding: 2rem;
 }
 
-.fa-github {
-    margin: 0 .3rem 0 .3rem;
-    color: #fff;
-    transition: .2s ease;
+section {
+    display: flex;
+    justify-content: space-around;
 }
 
-.fa-github:hover {
-    color: #126fe8;
-}
-
-.left__section {
-    width: 420px;
-    margin-right: 5rem;
-}
-
-.social__icons {
-    margin: 1.1rem 0;
-}
-
-.fa-instagram,
-.fa-twitter {
-    margin: 0 .3rem 0 .3rem;
-    color: #fff;
-    transition: .2s ease;
-}
-
-.fa-instagram:hover {
-    color: #dd2a7d;
-}
-
-.fa-twitter:hover {
-    color: #00acee;
+.buttons__container {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-around;
 }
 
 .panel {
@@ -107,28 +136,25 @@ small {
 
 
 button {
-    width: 90px;
+    width: 140px;
     height: 45px;
     font-weight: 600;
     font-size: 16px;
     border: none;
     outline: none;
-    border-radius: 6px;
     background-color: #2777ee;
     color: #fff;
-    margin-right: .7rem;
-    margin-bottom: .8rem;
     cursor: pointer;
     transition: .3s ease;
 }
 
 button:hover {
-    background-color: #d8f6fa;
-    color: #787373;
+    background-color: #0043fb;
 }
 
 .panel {
-    width: 620px;
+    padding: 0;
+    width: 550px;
     height: 240px;
     background-color: #181212;
     color: #157fea;
@@ -140,4 +166,21 @@ button:hover {
 
 #output > li {
     font-size: 19px;
+}
+
+footer {
+    margin: 2rem 0 1rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.user {
+    color: #efd81d;
+    transition: .2s ease-in;
+}
+
+.user:hover {
+    color: #f0e738;
+    border-bottom: 1px solid;
 }
